--- a/package.json
+++ b/package.json
@@ -24,14 +24,13 @@
     "dayjs": "1.11.7",
     "debug": "2.6.9",
     "dotenv": "16.0.3",
-    "express": "4.16.1",
-    "express-session": "^1.17.3",
+    "express": "^4.18.2",
     "helmet": "6.0.1",
     "http-errors": "1.6.3",
     "jsonwebtoken": "9.0.0",
     "mongoose": "6.9.0",
     "morgan": "1.9.1",
-    "passport": "0.6.0",
+    "passport": "0.5.3",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "4.0.1"
   },
@@ -41,11 +40,10 @@
     "@types/cookie-session": "^2.0.44",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
-    "@types/express-session": "^1.17.5",
     "@types/http-errors": "^2.0.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mocha": "^10.0.1",
-    "@types/passport": "1.0.11",
+    "@types/passport": "^1.0.11",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "3.0.8",
     "@types/supertest": "^2.0.12",
