--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "morgan": "1.9.1",
     "passport": "0.5.3",
     "passport-google-oauth20": "^2.0.0",
-    "passport-jwt": "4.0.1"
+    "passport-jwt": "4.0.1",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "@types/chai": "4.3.4",
