--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "body-parser": "1.20.1",
+    "chess.js": "^1.0.0-beta.3",
     "cookie-parser": "1.4.4",
     "cookie-session": "^2.0.0",
     "cors": "2.8.5",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/chai": "4.3.4",
+    "@types/chess.js": "^0.13.4",
     "@types/cookie-parser": "^1.4.3",
     "@types/cookie-session": "^2.0.44",
     "@types/cors": "^2.8.13",
