--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "body-parser": "1.20.1",
+    "chess.js": "^1.0.0-beta.3",
+    "chess.ts": "^0.16.2",
     "cookie-parser": "1.4.4",
     "cookie-session": "^2.0.0",
     "cors": "2.8.5",
@@ -30,7 +32,7 @@
     "jsonwebtoken": "9.0.0",
     "mongoose": "6.9.0",
     "morgan": "1.9.1",
-    "passport": "0.5.3",
+    "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "4.0.1",
     "socket.io": "^4.6.1"
