--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
     "express": "^4.18.2",
     "helmet": "6.0.1",
     "http-errors": "1.6.3",
+    "ioredis": "^5.3.1",
     "jsonwebtoken": "9.0.0",
     "mongoose": "6.9.0",
     "morgan": "1.9.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "4.0.1",
-    "redis": "^4.6.5",
+    "redlock": "^5.0.0-beta.2",
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
@@ -46,6 +47,7 @@
     "@types/http-errors": "^2.0.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mocha": "^10.0.1",
+    "@types/node": "^18.14.6",
     "@types/passport": "^1.0.11",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "3.0.8",
