--- a/package.json
+++ b/package.json
@@ -74,7 +74,13 @@
     ],
     "rules": {
       "@typescript-eslint/no-var-requires": 0,
-      "@typescript-eslint/strict-boolean-expressions": 0
+      "@typescript-eslint/strict-boolean-expressions": 0,
+      "@typescript-eslint/no-misused-promises": [
+          "error",
+          {
+            "checksVoidReturn": false
+          }
+        ]
     }
   },
   "lint-staged": {
