--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Install Dependencies
       run: npm ci
     - name: Lint
-      run: npm run lint
+      run: npm run eslint
 
   test:
     name: test 🧪
