--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -9,6 +9,7 @@ on:
 env:
   JWT_SECRET: ${{ secrets.JWT_SECRET }}
   DATABASE_URI: ${{ secrets.DATABASE_URI }}
+  REDIS_URI: ${{ secrets.REDIS_URI }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -44,7 +45,7 @@ jobs:
     - name: Install Dependencies
       run: npm ci
     - name: Lint
-      run: npm run eslint
+      run: npm run lint
 
   test:
     name: test 🧪
