--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "dev": "ts-node-dev app.ts",
     "tsc": "tsc",
     "lint": "ts-standard --fix",
-    "eslint": "eslint --ext .ts .",
     "prepare": "husky install",
     "test": "nyc mocha --exit --timeout 5000"
   },
@@ -37,7 +36,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "4.0.1",
     "redlock": "^5.0.0-beta.2",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "ts-standard": "^12.0.2"
   },
   "devDependencies": {
     "@types/chai": "4.3.4",
@@ -63,7 +63,6 @@
     "nyc": "^15.1.0",
     "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
-    "ts-standard": "^12.0.2",
     "typescript": "^4.9.4"
   },
   "eslintConfig": {
@@ -77,11 +76,11 @@
       "@typescript-eslint/no-var-requires": 0,
       "@typescript-eslint/strict-boolean-expressions": 0,
       "@typescript-eslint/no-misused-promises": [
-          "error",
-          {
-            "checksVoidReturn": false
-          }
-        ]
+        "error",
+        {
+          "checksVoidReturn": false
+        }
+      ]
     }
   },
   "lint-staged": {
