--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,4 +3,9 @@ services:
   express:
     build: ./
     ports:
-      - 80:4000
+      - 4000:4000
+      - 4001:4001
+  nginx:
+    build: ./nginx
+    ports:
+      - 80:80
