--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,8 +5,11 @@ upstream express {
 
 # Bloque de servidor para redirigir todas las solicitudes HTTP a HTTPS
 server {
-  listen 80;
+  listen 443 ssl;
   server_name _;
+
+  ssl_certificate /etc/nginx/cert.crt;
+  ssl_certificate_key /etc/nginx/cert.key;
 
   proxy_set_header Host $host;
   proxy_set_header X-Real-IP $remote_addr;
