nginx for http and ws with ssl

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -12,6 +12,7 @@ COPY ./cert.key /etc/nginx/cert.key
 
 # Expose the listening port
 EXPOSE 443
+EXPOSE 4043
 
 # Launch NGINX
 CMD [ "nginx", "-g", "daemon off;" ]
