--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev": "ts-node-dev app.ts",
     "tsc": "tsc",
     "lint": "ts-standard --fix",
+    "eslint": "eslint . --ext .ts --fix",
     "prepare": "husky install",
     "test": "nyc mocha --exit --timeout 5000"
   },
@@ -84,6 +85,6 @@
     }
   },
   "lint-staged": {
-    "*.ts": "ts-standard --fix"
+    "*.ts": "eslint . --ext .ts --fix"
   }
 }
