--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "scripts": {
     "start": "node build/app.js",
-    "dev": "ts-node-dev app.ts",
-    "tsc": "tsc",
+    "dev": "ts-node-dev -r tsconfig-paths/register app.ts",
+    "tsc": "tsc && tsc-alias",
     "lint": "eslint . --ext .ts --fix",
     "prepare": "husky install",
-    "test": "nyc mocha --exit --timeout 5000"
+    "test": "nyc mocha --exit --timeout 5000 -r ts-node/register -r tsconfig-paths/register \"test/**/*.ts\""
   },
   "dependencies": {
     "body-parser": "1.20.1",
@@ -37,7 +37,8 @@
     "passport-jwt": "4.0.1",
     "redlock": "^5.0.0-beta.2",
     "socket.io": "^4.6.1",
-    "ts-standard": "^12.0.2"
+    "ts-standard": "^12.0.2",
+    "tsconfig-paths": "^4.1.2"
   },
   "devDependencies": {
     "@types/chai": "4.3.4",
@@ -63,6 +64,7 @@
     "nyc": "^15.1.0",
     "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.3",
     "typescript": "^4.9.4"
   },
   "eslintConfig": {
