--- a/public/paths/auth/signUp.yaml
+++ b/public/paths/auth/signUp.yaml
@@ -1,4 +1,7 @@
 post:
+  servers: 
+    - url: 'http://localhost:4000/api/v1'
+    - url: 'https://api.gracehopper.xyz/api/v1'
   tags:
     - Auth
   summary: Sign Up
@@ -117,10 +120,10 @@ post:
   x-codeSamples:
     - lang: cURL
       source:
-        $ref: "../code_samples/curl/signUp.sh"
+        $ref: "../../code_samples/curl/signUp.sh"
     - lang: JavaScript
       source:
-         $ref: "../code_samples/javascript/signUp.js"
+         $ref: "../../code_samples/javascript/signUp.js"
     - lang: Dart
       source:
-         $ref: "../code_samples/dart/signUp.dart"
+         $ref: "../../code_samples/dart/signUp.dart"
