--- a/public/paths/webhooks/error.yaml
+++ b/public/paths/webhooks/error.yaml
@@ -1,4 +1,7 @@
 post:
+  servers: 
+    - url: 'http://localhost:4001'
+    - url: 'https://api.gracehopper.xyz:8443'
   tags: 
     -  Game
   summary: Error
