--- a/public/paths/users/getUser.yaml
+++ b/public/paths/users/getUser.yaml
@@ -17,7 +17,7 @@ get:
       required: true
       description: ID of the user to get
   responses:
-    '200':
+    200:
       description: Authorized
       content:
         application/json:
@@ -151,7 +151,7 @@ patch:
               example: qwerty
               description: Password to protect the user's profile
   responses:
-    '200':
+    200:
       description: Authorized
       content:
         application/json:
@@ -188,6 +188,75 @@ patch:
                   error_message:
                     type: string
                     example: Authorized
+                  elapsed:
+                    type: number
+    401:
+      description: Unauthorized
+      content:
+        application/json:
+          schema:
+            type: object
+            properties: 
+              status:
+                type: object
+                properties: 
+                  timestamp:
+                    type: string
+                    format: date
+                    example: 2023-02-18T14:51:41.370Z
+                  error_code:
+                    type: number
+                  error_message:
+                    type: string
+                    example: Unauthorized
+                  elapsed:
+                    type: number
+  x-codeSamples:
+    - lang: cURL
+      source: ""
+    - lang: JavaScript
+      source: ""
+    - lang: Dart
+      source: ""
+
+delete:
+  servers: 
+    - url: 'http://localhost:4000/api/v1'
+    - url: 'https://api.gracehopper.xyz/api/v1'
+  tags:
+    - User
+  summary: Delete User
+  description: Delete a user's account
+  operationId: deleteUser
+  security:
+    - api_key: []
+  parameters:
+    - in: path
+      name: id
+      schema:
+        type: string
+      required: true
+      description: ID of the user to get
+  responses:
+    200:
+      description: Authorized
+      content:
+        application/json:
+          schema:
+            type: object
+            properties: 
+              status:
+                type: object
+                properties: 
+                  timestamp:
+                    type: string
+                    format: date
+                    example: 2023-02-18T14:51:41.370Z
+                  error_code:
+                    type: number
+                  error_message:
+                    type: string
+                    example: Account successfully deleted
                   elapsed:
                     type: number
     401:
