--- a/public/paths/auth/signOut.yaml
+++ b/public/paths/auth/signOut.yaml
@@ -10,7 +10,7 @@ post:
   security:
     - api_key: []
   responses:
-    '200':
+    200:
       description: Logout ok
       content:
         application/json:
@@ -54,11 +54,4 @@ post:
                     type: number
   x-codeSamples:
     - lang: cURL
-      source:
-        $ref: "../../code_samples/curl/signOut.sh"
-    - lang: JavaScript
-      source:
-         $ref: "../../code_samples/javascript/signOut.js"
-    - lang: Dart
-      source:
-         $ref: "../../code_samples/dart/signOut.dart"
+      source: ""
