--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,17 +15,21 @@ server {
   ssl_certificate /etc/nginx/cert.crt;
   ssl_certificate_key /etc/nginx/cert.key;
 
-  proxy_set_header Host $host;
-  proxy_set_header X-Real-IP $remote_addr;
-  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-  # Configuración para soportar WebSockets
-  proxy_http_version 1.1;
-  proxy_set_header Upgrade $http_upgrade;
-  proxy_set_header Connection "upgrade";
-
   location / {
+    return 301 https://docs.gracehopper.xyz;
+  }
+
+  # Manejar todas las demás solicitudes
+  location /api/v1 {
     proxy_pass http://expresshttp;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+    # Configuración para soportar WebSockets
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
   }
 }
 
