--- a/public/components/schemas/AI.yaml
+++ b/public/components/schemas/AI.yaml
@@ -5,7 +5,7 @@ properties:
   gameType:
     type: string
     enum: 
-      - "CUSTOM"
+      - "AI"
   time:
     type: integer
     default: 300
@@ -15,8 +15,8 @@ properties:
   increment:
     type: integer
     default: 5
-    description: Time, in seconds, that is added to each player's timer
-      after they execute a movement.
+    description: Time, in seconds, that is added to each player's timer after
+      they execute a movement.
   hostColor:
     type: string
     default: RANDOM
@@ -25,8 +25,20 @@ properties:
       - RANDOM
       - LIGHT
       - DARK
+  difficulty:
+    type: integer
+    default: 3
+    description: |
+      Skill level of AI opponent.
+      This is property is equivalent to Stockfish' option "Skill Level".
+      * Levels from 1 to 3 are considered easy modes.
+      * Levels from 4 to 6 are perfect for more intermediate players.
+      * Levels 7 and 8 are the hardest a human should be able to beat.
+    minimum: 1
+    maximum: 20
 example:
-  gameType: "CUSTOM"
+  gameType: "AI"
   time: 300
   increment: 5
   hostColor: "RANDOM"
+  difficulty: 5
