--- a/public/components/schemas/competitive.yaml
+++ b/public/components/schemas/competitive.yaml
@@ -1,12 +1,12 @@
 type: object
+required:
+  - gameType
+  - time
 properties:
   gameType:
     type: string
     enum: 
-      - AI
-      - COMPETITIVE
-      - CREATE CUSTOM
-      - JOIN CUSTOM
+      - "COMPETITIVE"
   time:
     type: integer
     description: Available time, in seconds, for every player to move.
@@ -14,3 +14,6 @@ properties:
     - 180
     - 300
     - 600
+example:
+  gameType: "COMPETITIVE"
+  time: 300
