--- a/public/paths/webhooks/move.yaml
+++ b/public/paths/webhooks/move.yaml
@@ -7,15 +7,23 @@ post:
   summary: Move Piece
   operationId: move
   security: []
+  description: | 
+    Allows player to execute a chess move.
+    Only legal movements can be accepted.
   requestBody:
-    description: Allows you to search for a game against an opponent
     content:
       application/json:
         schema:
           required:
-            - id
-            - name
+            - move
           properties:
-            roomID:
+            move:
               type: string
-              description: Id of the room you want to watch.
+              description: |
+                Chess move to execute.
+                The move format is in long algebraic notation.
+
+                *Examples:* **e2e4**, **e7e5**, **e1g1** (white short castling),
+                **e7e8q** (for promotion).
+        example:
+          move: "e2e4"
