--- a/public/paths/webhooks/surrender.yaml
+++ b/public/paths/webhooks/surrender.yaml
@@ -1,4 +1,4 @@
-post:
+get:
   servers: 
     - url: 'http://localhost:4001'
     - url: 'https://api.gracehopper.xyz:8443'
@@ -6,16 +6,7 @@ post:
     -  Game
   summary: Surrender
   operationId: surrender
+  description: |
+    Allows player to surrender and grant victory to the opponent.
   security: []
-  requestBody:
-    description: Allows you to search for a game against an opponent
-    content:
-      application/json:
-        schema:
-          required:
-            - id
-            - name
-          properties:
-            roomID:
-              type: string
-              description: Id of the room you want to watch.
+
