Script para cambiar los status codes por events en un webhook

--- a/public/paths/webhooks/move.yaml
+++ b/public/paths/webhooks/move.yaml
@@ -27,3 +27,18 @@ post:
                 **e7e8q** (for promotion).
         example:
           move: "e2e4"
+  responses:
+    '515':
+      description: event(moved) 
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              code:
+                type: integer
+                example: 777
+              message:
+                type: string
+                example: Lorem ipsum
+
