--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,6 +25,7 @@ server {
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Origin $http_origin; 
 
     # Configuración para soportar WebSockets
     proxy_http_version 1.1;
