--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "npm": "8.15.0"
   },
   "scripts": {
-    "start": "node build/app.js",
-    "dev": "ts-node-dev -r tsconfig-paths/register app.ts",
+    "start": "set NODE_ENV=production && node build/app.js",
+    "dev": "set NODE_ENV=development && ts-node-dev -r tsconfig-paths/register app.ts",
     "tsc": "tsc && tsc-alias",
     "lint": "eslint . --ext .ts --fix",
     "prepare": "husky install",
-    "test": "nyc mocha --exit --timeout 5000 -r ts-node/register -r tsconfig-paths/register \"test/**/*.ts\""
+    "test": "set NODE_ENV=test && nyc mocha --exit --timeout 5000 -r ts-node/register -r tsconfig-paths/register \"test/**/*.ts\""
   },
   "dependencies": {
     "body-parser": "1.20.1",
