--- a/public/paths/auth/signUp.yaml
+++ b/public/paths/auth/signUp.yaml
@@ -40,83 +40,64 @@ post:
         application/json:
           schema:
             type: object
-            properties: 
+            properties:
               data:
-                type: object
-                properties: 
-                  id:
-                    type: string
-                    example: 63f0e5fd3b2d2904b0915fa8
-                  username:
-                    type: string
-                    example: johndoe
-                  email:
-                    type: string
-                    example: johndoe@example.com
-                  createdAt:
-                    type: string
-                    format: date
-                    example: 2023-02-18T14:51:41.307Z
-                  updatedAt:
-                    type: string
-                    format: date
-                    example: 2023-02-18T14:51:41.307Z
+                $ref: "../../components/schemas/user.yaml"
               status:
-                type: object
-                properties: 
-                  timestamp:
-                    type: string
-                    format: date
-                    example: 2023-02-18T14:51:41.370Z
-                  error_code:
-                    type: number
-                  error_message:
-                    type: string
-                    example: User created successfully
-                  elapsed:
-                    type: number
+                $ref: "../../components/schemas/status.yaml"
+          examples:
+            example:
+              summary: ""
+              value:
+                data:
+                  id: 507f1f77bcf86cd799439011
+                  avatar: "https://api.gracehopper.xyz/..."
+                  username: johndoe
+                  email: "johndoe@example.com"
+                  google: true
+                  createdAt: 2023-02-18T14:51:41.370Z
+                  updatedAt: 2023-02-18T14:51:41.370Z
+                status:
+                  timestamp: 2023-02-18T14:51:41.370Z
+                  error_code: 200
+                  error_message: ""
+                  elapsed: 0
     409:
       description: User already exists
       content:
         application/json:
           schema:
             type: object
-            properties: 
+            properties:
               status:
-                type: object
-                properties: 
-                  timestamp:
-                    type: string
-                    format: date
-                    example: 2023-02-18T14:51:41.370Z
-                  error_code:
-                    type: number
-                  error_message:
-                    type: string
-                    example: User already exists
-                  elapsed:
-                    type: number
+                $ref: '../../components/schemas/status.yaml'
+          examples:
+            example:
+              summary: ""
+              value:
+                status:
+                  timestamp: 2023-02-18T14:51:41.370Z
+                  error_code: 409
+                  error_message: ""
+                  elapsed: 0
     500:
       description: Internal server error
       content:
         application/json:
           schema:
             type: object
-            properties: 
+            properties:
               status:
-                type: object
-                properties: 
-                  timestamp:
-                    type: string
-                    format: date
-                    example: 2023-02-18T14:51:41.370Z
-                  error_code:
-                    type: number
-                  error_message:
-                    type: string
-                    example: Internal server error
-                  elapsed:
-                    type: number
+                $ref: '../../components/schemas/status.yaml'
+          examples:
+            example:
+              summary: ""
+              value:
+                status:
+                  timestamp: 2023-02-18T14:51:41.370Z
+                  error_code: 500
+                  error_message: ""
+                  elapsed: 0
   x-codeSamples:
     - lang: cURL
       source: ""
