--- a/public/paths/tournaments/tournaments.yaml
+++ b/public/paths/tournaments/tournaments.yaml
@@ -7,6 +7,7 @@ get:
   summary: Get Tournament
   description: Allows to consult the information of a specific tournament
   operationId: getTournament
+  security: []
   parameters:
     - in: path
       name: id
