--- a/public/paths/users/getAllUsers.yaml
+++ b/public/paths/users/getAllUsers.yaml
@@ -7,6 +7,7 @@ get:
   summary: All Users
   description: Retrieves information from all users
   operationId: getAllUsers
+  security: []
   responses:
     200:
       description: Authorized
@@ -20,11 +21,10 @@ get:
                 items:
                   $ref: '../../components/schemas/user_detail.yaml'
               status:
-                schema:
-                  type: object
-                  properties:
-                    status:
-                      $ref: '../../components/schemas/status.yaml'
+                type: object
+                properties:
+                  status:
+                    $ref: '../../components/schemas/status.yaml'
           examples:
             example:
               summary: ""
