--- a/public/paths/auth/forgotPassword.yaml
+++ b/public/paths/auth/forgotPassword.yaml
@@ -33,9 +33,11 @@ post:
                 properties:
                   id: 
                     type: string
+                    description: Unique identifier of a user.
                   url:
                     type: string
                     format: url
+                    description: URI with embedded session token
               status:
                 $ref: "../../components/schemas/status.yaml"
           examples:
