--- a/public/paths/auth/resetPassword.yaml
+++ b/public/paths/auth/resetPassword.yaml
@@ -130,13 +130,17 @@ get:
                 properties:
                   id: 
                     type: string
+                    description: Unique identifier of a user.
                   email:
                     type: string
                     format: email
+                    description: Email address of a user.
                   iat:
                     type: integer
+                    description: Time when the token was created.
                   exp:
                     type: integer
+                    description: Identifies the timestamp after which the JWT does not have to be accepted.
                   
               status:
                 $ref: "../../components/schemas/status.yaml"
