--- a/public/paths/tournaments/joinTournaments.yaml
+++ b/public/paths/tournaments/joinTournaments.yaml
@@ -17,48 +17,42 @@ get:
       required: true
       description: ID of the tournament to join
   responses:
-    '200':
+    200:
       description: Authorized
       content:
         application/json:
           schema:
             type: object
-            properties: 
+            properties:
               status:
-                type: object
-                properties: 
-                  timestamp:
-                    type: string
-                    format: date
-                    example: 2023-02-18T14:51:41.370Z
-                  error_code:
-                    type: number
-                  error_message:
-                    type: string
-                    example: Authorized
-                  elapsed:
-                    type: number
+                $ref: '../../components/schemas/status.yaml'
+          examples:
+            example:
+              summary: ""
+              value:
+                status:
+                  timestamp: 2023-02-18T14:51:41.370Z
+                  error_code: 200
+                  error_message: ""
+                  elapsed: 0
     401:
       description: Unauthorized
       content:
         application/json:
           schema:
             type: object
-            properties: 
+            properties:
               status:
-                type: object
-                properties: 
-                  timestamp:
-                    type: string
-                    format: date
-                    example: 2023-02-18T14:51:41.370Z
-                  error_code:
-                    type: number
-                  error_message:
-                    type: string
-                    example: Unauthorized
-                  elapsed:
-                    type: number
+                $ref: '../../components/schemas/status.yaml'
+          examples:
+            example:
+              summary: ""
+              value:
+                status:
+                  timestamp: 2023-02-18T14:51:41.370Z
+                  error_code: 401
+                  error_message: ""
+                  elapsed: 0
   x-codeSamples:
     - lang: cURL
       source: ""
