--- a/public/paths/webhooks/findRoom.yaml
+++ b/public/paths/webhooks/findRoom.yaml
@@ -8,8 +8,16 @@ post:
   operationId: findRoom
   security: []
   description: |
-      Allows a user to search for a match against a random opponent
-      or create a custom game against AI or a friend.
+    event(find_room)
+    Allows a user to search for a match against a random opponent
+    or create a custom game against AI or a friend.
+
+    * **AI**: start a game against the AI.
+    * **competitive**: find a game against a random player to climb in rankings
+      *(requires an authenticated socket)*.
+    * **createCustom**: start a custom game
+      *(requires an authenticated socket)*.
+    * **joinCustom**: join a custom game.
   requestBody:
     content:
       application/json:
@@ -26,3 +34,147 @@ post:
               #"\"COMPETITIVE\"": ../../components/schemas/competitive.yaml
               #"\"CUSTOM\" (create a game)": ../../components/schemas/createCustom.yaml
               #"\"CUSTOM\" (join a game)": ../../components/schemas/joinCustom.yaml
+  responses:
+    '200':
+      description: event(room) 
+        Emits to every player the initial state of the game,
+        or the id of the room in case the `find_room` event was
+        sent to create a custom game.
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              roomID:
+                type: string
+                description: |
+                  Id of the room where the game takes place.
+                  It can be shared to let other users spectate the match.
+              color:
+                type: string
+                description: Player's color in this game.
+                enum: 
+                  - LIGHT
+                  - DARK
+              turn:
+                type: string
+                description: Next player to move.
+                enum: 
+                  - LIGHT
+                  - DARK
+              light:
+                type: string
+                description: |
+                  Name of light side player.
+              dark:
+                type: string
+                description: |
+                  Name of dark side player.
+              board:
+                type: string
+                description: |
+                  Current state of this game's board, in FEN notation.
+              moves:
+                type: string[]
+                description: |
+                  List of all the moves executed, in long algebraic notation.
+              useTimer:
+                type: boolean
+                description: |
+                  `true` only if players have limited time to play.
+              initialTimer:
+                type: integer
+                description: |
+                  `time` property with which this game was created
+                  *(only sent if the game uses timer)*.
+              timerIncrement:
+                type: integer
+                description: |
+                  `increment` property with which this game was created
+                  *(only sent if the game uses timer)*.
+              timerLight:
+                type: integer
+                description: | 
+                  Time remaining, in milliseconds, for the light player to move
+                  *(only sent if the game uses timer)*.
+              timerDark:
+                type: integer
+                description: | 
+                  Time remaining, in milliseconds, for the dark player to move
+                  *(only sent if the game uses timer)*.
+              gameType:
+                type: string
+                enum: 
+                  - "AI"
+                  - "COMPETITIVE"
+                  - "CUSTOM"
+                  - "TOURNAMENT"
+          examples:
+            "created AI game":
+              value:
+                roomID: "123456"
+                color: "DARK"
+                turn: "LIGHT"
+                light: "AI"
+                dark: "Guest"
+                board: "rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1"
+                moves: []
+                useTimer: true
+                initialTimer: 125
+                timerIncrement: 3
+                timerDark: 125000
+                timerLight: 125000
+                gameType: "AI"
+            "created custom game":
+              value:
+                roomID: "123456"
+            "joined custom game":
+              value:
+                roomID: "123456"
+                color: "LIGHT"
+                turn: "LIGHT"
+                light: "Guest"
+                dark: "Host"
+                board: "rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1"
+                moves: []
+                useTimer: false
+                gameType: "CUSTOM"
+            "joined competitive game":
+              value:
+                roomID: "123456"
+                color: "LIGHT"
+                turn: "LIGHT"
+                light: "Bob"
+                dark: "Alice"
+                board: "rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1"
+                moves: []
+                useTimer: true
+                initialTimer: 300
+                timerIncrement: 0
+                timerDark: 300000
+                timerLight: 300000
+                gameType: "COMPETITIVE"
+    '400':
+      description: event(error)
+        Something went wrong.
+      content:
+        text/plain:
+          schema:
+            description: Details of what caused the error.
+            type: string
+          examples:
+            not supported game type:
+              value: Not supported game type
+            busy socket:
+              value: This socket is already playing or in queue
+            invalid hostColor property:
+              value: Host color "RED" is not a valid option
+            time property is not a number:
+              value: Initial timer is not a number
+            time property is negative:
+              value: Initial timer value cannot be negative
+            increment property is not a number:
+              value: Timer increment is not a number
+            increment property is negative:
+              value: Timer increment value cannot be negative
+            
