--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "debug": "2.6.9",
     "dotenv": "16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "express-slow-down": "^1.6.0",
     "helmet": "6.0.1",
     "http-errors": "1.6.3",
     "ioredis": "^5.3.1",
@@ -38,7 +40,8 @@
     "redlock": "^5.0.0-beta.2",
     "socket.io": "^4.6.1",
     "ts-standard": "^12.0.2",
-    "tsconfig-paths": "^4.1.2"
+    "tsconfig-paths": "^4.1.2",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/chai": "4.3.4",
@@ -46,6 +49,7 @@
     "@types/cookie-session": "^2.0.44",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
+    "@types/express-slow-down": "^1.3.2",
     "@types/http-errors": "^2.0.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mocha": "^10.0.1",
@@ -54,6 +58,7 @@
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "3.0.8",
     "@types/supertest": "^2.0.12",
+    "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "autocannon": "^7.10.0",
     "chai": "^4.3.7",
