--- a/public/paths/auth/resetPassword.yaml
+++ b/public/paths/auth/resetPassword.yaml
@@ -1,7 +1,7 @@
 post:
   servers: 
-    - url: 'http://localhost:4000/api/v1'
-    - url: 'https://api.gracehopper.xyz/api/v1'
+    - url: 'http://localhost:4000/v1'
+    - url: 'https://api.gracehopper.xyz/v1'
   tags:
     - Auth
   summary: Reset Password
@@ -96,8 +96,8 @@ post:
       
 get:
   servers: 
-    - url: 'http://localhost:4000/api/v1'
-    - url: 'https://api.gracehopper.xyz/api/v1'
+    - url: 'http://localhost:4000/v1'
+    - url: 'https://api.gracehopper.xyz/v1'
   tags:
     - Auth
   summary: Check Reset Uri
