--- a/public/paths/auth/signIn.yaml
+++ b/public/paths/auth/signIn.yaml
@@ -1,7 +1,7 @@
 post:
   servers: 
-    - url: 'http://localhost:4000/api/v1'
-    - url: 'https://api.gracehopper.xyz/api/v1'
+    - url: 'http://localhost:4000/v1'
+    - url: 'https://api.gracehopper.xyz/v1'
   tags:
     - Auth
   summary: Sign In
