--- a/public/paths/history/getHistory.yaml
+++ b/public/paths/history/getHistory.yaml
@@ -1,7 +1,7 @@
 get:
   servers: 
-    - url: 'http://localhost:4000/api/v1'
-    - url: 'https://api.gracehopper.xyz/api/v1'
+    - url: 'http://localhost:4000/v1'
+    - url: 'https://api.gracehopper.xyz/v1'
   tags:
     - History
   summary: Get Game
